test/errors/error6.vult
fun foo() {
   _ = 1 # 3;
}
